--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+<title>brother in low</title>
+<meta  charset="UTF-8"/>
+<link rel="stylesheet" type="text/css" href="K:/Web-Designer/Css/style.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+<div id="containter">
+
+
+<header>
+<form action="add" method="post">
+<td><input name="user" type="text" required="required" placeholder="Email Address"/></td>
+<td><input name="user" type="password" required="required" placeholder="New Password"/></td>
+<span><td><input name="add" type="submit" value="Sign in"/></td></span> 
+<a href="http://selfchallnge.com/reset_password">
+        <div class="login_button3" style="">Forgot Password</div>
+        </a></form>
+		<p>اخوكم في اللة ود الهادي <span>Sign in</span></p>
+</header>
+
+<div id="content">
+
+<div class="nav">
+<h3>Navigation</h3>
+
+<li><a href="#">Information</a></li>
+<li><a href="#">Ask quotation</a></li>
+<li><a href="#">Your idea</a></li>
+<textarea rows="3" cols="15" placeholder="Write here" ></textarea> 
+<td><input name="add" type="submit" value="post"/></td>
+</div>
+
+
+<div id="nav">
+<p>Dear vistor please sign up here in order to go to our <span>Home page</span></p>
+<h2>Sign up</h2>
+
+<form action="www.Selfchallgne.com" method="post">
+<td><input name="user" type="text" required="required" placeholder="Fisrt Name"/></td>
+<td><input name="user" type="text" required="required" placeholder="Last Name"/></td>
+<td><input name="user" type="text" required="required" placeholder="Email Address"/></td>
+<td><input name="user" type="password" required="required" placeholder="New Password"/></td>
+<span><td><input name="add" type="submit" value="Sign in"/></td></span>
+</form></div>
+
+
+<div id="main">
+<h2>Welcome page</h2>
+<p>Hello friends how are you and how are you doing. I am your brother in low Ibrahim Al hadi I hope my web page please you I am trying to make great web page in order to share my idea to you </p>
+<p>I am not saying that I know a lot just some half. So anyway I wish to make some thing bright as well as a Designer. Honorable friends your commons are very important for me I want to know about my web page if it has value or not that it's all Dears.</p>
+<p>“Great discoveries and improvements invariably involve the cooperation of many minds. I may be given credit for having blazed the trail, but when I look at the subsequent developments I feel the credit is due to others rather than to myself.”</P>
+<p>brothers and sisters why we don't engage together in order to skip the problems of Asylum.
+Brothers and Sisters once again Asylum it isn't solution for us.
+Do you see , every places that we have been in it the nation of that place don't like us to be there.
+So please i beg you again and again try to motivate yourself forward because we expect something form you also we need all of us to be in our homelands.
+A real reality we don't want to be refugees at all but unfortunately a genocide forced us to be refugees
+Also a place that we are refugees in it , nation of that place they don't like to accept us as refugees they are trying to deny us from our civil right.
+I knew when the country suffered from political instability it makes it even harder to provide health and Education service for the people.
+it can also damage the economy and making poverty much worse
+So we are suffering from all of these points the question remains as it is.
+why they are trying to ignore their responsibilities</p>
+
+</div>
+
+
+
+<div id="footer">
+<p>copyright &copy; 10/20/2015 by brother in low</p>
+</div>
+</div>
+
+</body>
+
+</html>
