--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>brother in low</title>
 <meta  charset="UTF-8"/>
-<link rel="stylesheet" type="text/css" href="K:/Web-Designer/Css/style.css" />
+<link rel="stylesheet" type="text/css" href="All-Repostories/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
